--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <div class="profile-name">Zanni</div>
 
         <!-- Links -->
-        <a href="https://youtube.com" class="Links">YOUTUBE</a>
+        <!-- <a href="https://youtube.com" class="Links">YOUTUBE</a> -->
         <a href="https://discord.gg/P7QGD4qf75" class="Links">DISCORD</a>
-        <a href="https://heisteriarp.github.io/" class="Links">WEBSITE</a>
+        <!-- <a href="https://heisteriarp.github.io/" class="Links">WEBSITE</a> -->
 
         <!-- Text -->
         <div class="bottom-text">ZANNI GANTENG :) :V</div>
