--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <div class="profile-name">Zanni</div>
 
+        <div class="profile-descripsion">Hi, apa kabar ? sehat? kalau sehat bagus deh hihi :)</div>
+
         <!-- Links -->
         <!-- <a href="https://youtube.com" class="Links">YOUTUBE</a> -->
         <a href="https://discord.gg/P7QGD4qf75" class="Links">DISCORD</a>
