--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
         <a href="https://discord.gg/P7QGD4qf75" class="Links">DISCORD</a>
         <!-- <a href="https://heisteriarp.github.io/" class="Links">WEBSITE</a> -->
 
+        <h1>ADUH SIAPA YAHH</h1>
+        
         <!-- Text -->
-        <div class="bottom-text">ZANNI GANTENG :) :V</div>
+        <div class="bottom-text">hihi</div>
+        <audio controls autoplay>
+            <source src="audio.mp3" type="audio/mpeg">
+        </audio>
     </body>
 
 </html>
