--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <img src="assets/logo.png" alt="profile picture" class="profile-picture">
 
-        <div class="profile-name">Zanni</div>
+        <div class="profile-name">M,Zanni</div>
 
         <div class="profile-descripsion">Hi, apa kabar ? sehat? kalau sehat bagus deh hihi :)</div>
 
