--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
         <a href="https://discord.gg/P7QGD4qf75" class="Links">DISCORD</a>
         <!-- <a href="https://heisteriarp.github.io/" class="Links">WEBSITE</a> -->
 
-        <h1>H</h1>
+        <h1>💕🥰</h1>
+        <H1>PALING IMUT</H1>
         
         <!-- Text -->
-        <div class="bottom-text">hihi</div>
+        <div class="bottom-text"><></div>
         <audio controls autoplay>
             <source src="audio.mp3" type="audio/mpeg">
         </audio>
